# Ballenger_GLFW_OpenGL4_Port

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake
Ballenger_GLFW_OpenGl4_Port/: Ballenger_GLFW_OpenGl4_Port  CMakeLists.txt  Globals.h  Makefile  cmake_install.cmake  ge_bicho.h  ge_camera.h  ge_column.cpp  ge_column.h  ge_data.cpp  ge_data.h  ge_energyBeacon.cpp  ge_energyBeacon.h  ge_energyRay.cpp  ge_energyRay.h  ge_game.cpp  ge_game.h  ge_image.h  ge_key.cpp  ge_key.h  ge_lava.cpp  ge_lava.h  ge_levelConfig.cpp  ge_levelConfig.h  ge_levelFile.h  ge_model.cpp  ge_model.h  ge_player.cpp  ge_player.h  ge_playerCamera.cpp  ge_playerCamera.h  ge_portal.cpp  ge_portal.h  ge_respawnPoint.cpp  ge_respawnPoint.h  ge_scene.cpp  ge_scene.h  ge_shader.cpp  ge_shader.h  ge_skybox.cpp  (+10 more)
Ballenger_GLFW_OpenGl4_Port/Shaders/: key.frag  key.vert  player.frag  shaderTest.frag
Levels/: g4g.txt  level01.json  terrain02.data  terrain02.psd  terrain02.raw  terrain02.xcf
Shaders/: complex.vert  energyBeacon.frag  energyBeacon.vert  key.frag  key.vert  lavaglow.vert  lightball.frag  normalmap.frag  player.frag  player.vert  respawnPoint.frag  shaderTest.vert  terrain.frag  terrain.vert  textured.frag
src/: Globals.h  Makefile  ge_bicho.cpp  ge_camera.h  ge_data.cpp  ge_data.h  ge_game.cpp  ge_game.h  ge_image.cpp  ge_lava.cpp  ge_model.cpp  ge_player.cpp  ge_player.h  ge_shader.h  ge_skybox.cpp  ge_skybox.h  ge_sound.cpp  ge_sound.h  ge_terrain.h  ge_texture.cpp  glad.c  main.cpp
src/Shaders/: lavaglow.frag  lightbeam.frag
